# a-clique-based-approach-for-spatial-data-mining

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.txt
data/: 5k_15f_50k.csv  LasVegas_x_y_alphabet_version_03_2.csv  sample_data.csv
src/: config.txt
src/include/: calculate_pi.h  candidate_generation.h  config.h  csv.hpp  data_loader.h  ids.h  ids_tree.h  miner.h  neighborhood_mgr.h  types.h  utils.h
src/src/: calculate_pi.cpp  candidate_generation.cpp  config.cpp  data_loader.cpp  ids_tree.cpp  main.cpp  miner.cpp  neighborhood_mgr.cpp  utils.cpp
